# whatsapt

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  README.md  ascii-art.txt  main.py  pyproject.toml  run-bridge.sh  run-main.sh
client/: bridge.py  db.py  models.py
tests/: conftest.py  test_db.py
tools/: deps.py  messages.py  queries.py  utility.py
