[project]
name = "whatsapt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "click-log>=0.4.0",
    "polars>=1.41.2",
    "pydantic-ai>=1.106.0",
    "rich-click>=1.9.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
